# OpenCV-Aruco-Memory-Card-Game

./: .gitignore  CMakeLists.txt  CardGame.cpp  CardGame.h  main.cpp
